docs: update content on the main page
Updates the text on index.html to show current project status.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
     <body>
         <h1>Welcome</h1>
+        <h1>
+            Project status
+        </h1>
+        <p>Initial setup complited.</p>
     </body>
 
 </html>
