feat: Add script.js file
Created script.js file for future web page logic.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="ru">
     <head>
-        <title>Git Lab</title>
+        <meta charset="UTF-8">
+        <title>Цитаты из кино</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
         <h1>Welcome</h1>
         <h1>
             Project status
         </h1>
         <p>Initial setup complited.</p>
-    </body>
 
+        <!-- Подключаем скрипт перед закрывающим тегом body -->
+        <script src="script.js" defer></script>
+    </body>
 </html>
