--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Welcome</h1>
-        <h1>
-            Project status
-        </h1>
-        <p>Initial setup complited.</p>
+        <main class="container">
+            <h1>Цитаты из кино</h1>
+            <ul id="quote-list">
+                <!-- Цитаты будут добавляться сюда с помощью JavaScript -->
+            </ul>
+        </main>
 
-        <!-- Подключаем скрипт перед закрывающим тегом body -->
         <script src="script.js" defer></script>
     </body>
 </html>
