--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Цитаты из кино</title>
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+        
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -12,7 +17,7 @@
                 <!-- Цитаты будут добавляться сюда с помощью JavaScript -->
             </ul>
         </main>
-
+        
         <script src="script.js" defer></script>
     </body>
 </html>
